bug fixes: login perpetuation, mobile nav bar visibility

--- a/gym-progress-frontend/app/globals.css
+++ b/gym-progress-frontend/app/globals.css
@@ -25,6 +25,7 @@
 
 html {
   scroll-behavior: smooth;
+  scroll-padding-top: 80px;
 }
 
 ::-webkit-scrollbar {
@@ -1039,6 +1040,9 @@ span.exercise-name {
 
 header.nav-header {
   background-color: var(--darkGray);
+  position: fixed;
+  width: 100%;
+  z-index: 1000;
   color: whitesmoke;
   display: flex;
   justify-content: space-between;
@@ -1049,6 +1053,9 @@ header.nav-header {
 
 header.mobile-nav-header {
   background-color: var(--darkGray);
+  position: fixed;
+  width: 100%;
+  z-index: 1000;
   color: whitesmoke;
   display: flex;
   justify-content: space-between;
@@ -1056,6 +1063,12 @@ header.mobile-nav-header {
   padding: 20px;
   height: 65px;
 }
+
+header.nav-header + main,
+header.mobile-nav-header + main {
+  margin-top: 58px !important;
+}
+
 
 div.dashboard-body {
   height: calc(100vh - 65px);
@@ -2713,6 +2726,10 @@ div.popup#demo-creds .close-button:hover {
     height: 70vh;
   }
 
+  #p3 .left {
+    padding: 15px;
+  }
+
   #p4 {
     flex-direction: column;
   }
@@ -2724,8 +2741,31 @@ div.popup#demo-creds .close-button:hover {
 }
 
 @media screen and (max-width: 512px) {
+
+  #p1 .right ul {
+    padding: 20px;
+  }
+
+  #p1 .right li {
+    font-size: 10pt;
+    margin: 5px 0;
+  }
+
+  #p3 .right {
+    padding: 0;
+  }
+
   #p4 {
     justify-content: space-around;
   }  
+
+  #p4 .left p {
+    font-size: 12pt;
+  }
+
+  #p5 .body {
+    font-size: 14pt;
+    padding: 10px;
+  }
 }
 
